<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kapouter.konik.auth.SignInActivity">

    <TextView
        android:id="@+id/sign_in_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/space_4xl"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_4xl"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <EditText
            android:id="@+id/sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/sign_in" />

    </LinearLayout>

    <TextView
    android:id="@+id/sign_in_sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/sign_in_form"
    android:layout_centerHorizontal="true"
    android:clickable="true"
    android:paddingBottom="@dimen/space_l"
    android:paddingTop="@dimen/space_4xl"
    android:text="@string/sign_up" />

    <TextView
        android:id="@+id/sign_in_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_sign_up"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:paddingBottom="@dimen/space_l"
        android:paddingTop="@dimen/space_4xl"
        android:text="@string/skip" />

</RelativeLayout>
