<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kapouter.konik.auth.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sign_up_back"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_chevron_left_black_48dp"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_4xl"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/sign_up_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/password_confirmation"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_l"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/sign_up" />

    </LinearLayout>

</RelativeLayout>
